--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model registro_hotel_mox_it.Models.Customer
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
