Fixing names, styling

--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button><a asp-action="Index">Back to List </a> </button>
 </div>
 
 @section Scripts {
