--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -45,8 +45,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <button><a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a></button> |
+   <button> <a asp-action="Index">Back to List</a> </button>
 </div>
 </body>
 </html>
