--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button><a asp-action="Index">Back to List</a></button>
 </div>
 
 @section Scripts {
