--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - registro_hotel_mox_it - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            Battelli-Rosso Hotel - Mox It - 2023<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
