Changing Title to Actions

--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -43,12 +43,12 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            
         </form>
     </div>
 </div>
-
 <div>
-    <button><a asp-action="Index">Back to List </a> </button>
+    <button class="btn btn-primary btn-sm"><a asp-action="Index" style="color: white; text-decoration: none;">Back to List </a> </button>
 </div>
 
 @section Scripts {
