--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -45,8 +45,9 @@
     </dl>
 </div>
 <div>
-    <button><a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a></button> |
-   <button> <a asp-action="Index">Back to List</a> </button>
+    <button class="btn btn-primary btn-sm"><a asp-action="Edit" style="color: white; text-decoration: none;" asp-route-id="@Model?.Id">Edit</a></button>|
+    <button class="btn btn-primary btn-sm"> <a asp-action="Index" style="color: white; text-decoration: none;">Back to List</a> </button>
+
 </div>
 </body>
 </html>
