--- a/Views/Customers/Delete.cshtml
+++ b/Views/Customers/Delete.cshtml
@@ -48,7 +48,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <button><a asp-action="Index">Back to List</a></button>
+        <button class="btn btn-primary btn-sm"><a asp-action="Index" style="color: white; text-decoration: none;">Back to List</a></button>
     </form>
 </div>
 </body>
