--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <button><a asp-action="Index">Back to List</a></button>
+    <button class="btn btn-primary btn-sm"><a asp-action="Index" style="color: white; text-decoration: none;"> Back to List</a></button>
 </div>
 
 @section Scripts {
