--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -32,6 +32,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.CheckOutDate)
             </th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
