--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,4 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Battelli-Rosso Hotel</h1>
+    <img src="~/lib/images/background.jpeg" />
 </div>
